Fixing height issue in stylesheet causing unnecessary scrollbar.

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ table {
 	margin-left: 140px;
 	width: 600px;
 	padding: 10px 20px 0px 20px;
-	height: 100%;
+
 }
 
 body {
